--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -220,7 +220,7 @@ tensorboard-plugin-wit==1.8.1 # LEVEL_01 # What-If Tool TensorBoard plugin
 #
 tensorflow-datasets==4.5.2 # LEVEL_04 # tensorflow/datasets is a library of datasets ready to use with TensorFlow
 tensorflow-metadata==1.7.0 # LEVEL_03 # Library and standards for schema and statistics
-tensorflow-model-optimization==0.7.2 # LEVEL_03 # A suite of tools that users, both novice and advanced can use to optimize machine learning models for deployment and execution
+tensorflow-model-optimization==0.7.2 # LEVEL_02 # A suite of tools that users, both novice and advanced can use to optimize machine learning models for deployment and execution
 tensorflow-addons==0.16.1 # LEVEL_02 # TensorFlow Addons
 tensorflow-hub==0.12.0 # LEVEL_02 # TensorFlow Hub is a library to foster the publication, discovery, and consumption of reusable parts of machine learning models
 tensorflow-io-gcs-filesystem==0.24.0 # LEVEL_01 # TensorFlow IO
@@ -570,7 +570,7 @@ django-http-exceptions==1.4.0 # LEVEL_03 # django raisable http exceptions
 django-model-utils==4.2.0 # LEVEL_03 # Django model mixins and utilities
 django-request-logging==0.7.5 # LEVEL_03 # Django middleware that logs http request body
 djangorestframework==3.13.1 # LEVEL_03 # Web APIs for Django, made easy
-Django==4.0.3 # LEVEL_02 # A high-level Python web framework that encourages rapid development and clean, pragmatic design
+Django==4.0.4 # LEVEL_02 # A high-level Python web framework that encourages rapid development and clean, pragmatic design
 #
 # ASGI
 #
@@ -609,7 +609,7 @@ pydata-sphinx-theme==0.8.1 # LEVEL_04 # Bootstrap-based Sphinx theme from the Py
 sphinx-autobuild==2021.3.14 # LEVEL_04 # Rebuild Sphinx documentation on changes, with live-reload in the browser
 sphinx-rtd-theme==1.0.0 # LEVEL_04 # Read the Docs theme for Sphinx
 sphinx-panels==0.6.0 # LEVEL_04 # A sphinx extension for creating panels in a grid layout
-sphinx-autodoc-typehints==1.17.0 # LEVEL_04 # Type hints (PEP 484) support for the Sphinx autodoc extension
+sphinx-autodoc-typehints==1.18.1 # LEVEL_04 # Type hints (PEP 484) support for the Sphinx autodoc extension
 Sphinx==4.5.0 # LEVEL_03 # Python documentation generator
 sphinx-markdown-tables==0.0.15 # LEVEL_04 # A Sphinx extension for rendering tables written in markdown
 sphinxcontrib-applehelp==1.0.2 # LEVEL_01 # sphinxcontrib-applehelp is a sphinx extension which outputs Apple help books
@@ -658,7 +658,7 @@ commonmark==0.9.1 # LEVEL_01 # Python parser for the CommonMark Markdown spec
 markdown2==2.4.2 # LEVEL_01 # A fast and complete Python implementation of Markdown
 
 # HTML scraping, sanitizing, minimizing
-beautifulsoup4==4.11.0 # LEVEL_02 # Screen-scraping library
+beautifulsoup4==4.11.1 # LEVEL_02 # Screen-scraping library
 bleach==4.1.0 # LEVEL_03 # An easy safelist-based HTML-sanitizing tool
 ansi2html==1.7.0 # LEVEL_01
 htmlmin==0.1.12 # LEVEL_01 # An HTML Minifier
@@ -668,10 +668,10 @@ pipx==1.0.0 # LEVEL_03 # Install and Run Python Applications in Isolated Environ
 docker==5.0.3 # LEVEL_03 # A Python library for the Docker Engine API
 docker-pycreds==0.4.0 # LEVEL_02 # Python bindings for the docker credentials store API
 pyinstaller==4.10 # LEVEL_03 # PyInstaller bundles a Python application and all its dependencies into a single package
-pyinstaller-hooks-contrib==2022.3 # LEVEL_01 # deployment # Community maintained hooks for PyInstaller
+pyinstaller-hooks-contrib==2022.4 # LEVEL_01 # deployment # Community maintained hooks for PyInstaller
 
 # Packages
-importlib-resources==5.6.0 # LEVEL_02 # Read resources from Python packages
+importlib-resources==5.7.1 # LEVEL_02 # Read resources from Python packages
 packaging==21.3 # LEVEL_02 # Core utilities for Python packages
 distlib==0.3.4 # LEVEL_01 # Distribution utilities
 entrypoints==0.4 # LEVEL_01 # Discover and load entry points from installed packages
@@ -709,7 +709,7 @@ asttokens==2.0.5 # LEVEL_02 # # Annotate AST trees with source code positions
 executing==0.8.3 # LEVEL_01 # # Get the currently executing AST node of a frame, and other information
 pure-eval==0.2.2 # LEVEL_01 # # Safely evaluate AST nodes without side effects
 #
-pydeps==1.10.12 # LEVEL_02 # cd src/main; pydeps .; open main.svg # Display module dependencies
+pydeps==1.10.17 # LEVEL_02 # Display module dependencies
 importlab==0.7 # LEVEL_02 # A library to calculate python dependency graphs
 ninja==1.10.2.3 # LEVEL_01 # Ninja is a small build system with a focus on speed
 #
@@ -732,7 +732,7 @@ aiodns==3.0.0 # LEVEL_04 # Simple DNS resolver for asyncio
 aiohttp-socks==0.7.1 # LEVEL_04 # Proxy connector for aiohttp
 pycocotools==2.0.4 # LEVEL_04 # ONLY_OSX # Official APIs for the MS-COCO dataset
 #
-aenum==3.1.8 # LEVEL_01 # Advanced Enumerations (compatible with Python's stdlib Enum), NamedTuples, and NamedConstants
+aenum==3.1.11 # LEVEL_01 # Advanced Enumerations (compatible with Python's stdlib Enum), NamedTuples, and NamedConstants
 aiohttp==3.8.1 # LEVEL_03 # Async http client/server framework (asyncio)
 async-timeout==4.0.2 # LEVEL_01 # Timeout context manager for asyncio programs
 aioredis==2.0.1 # 1.3.1 # LEVEL_02 # asyncio (PEP 3156) Redis support
@@ -763,7 +763,7 @@ decorator==5.1.1 # LEVEL_01 # Decorators for Humans
 defusedxml==0.7.1 # LEVEL_01 # XML bomb protection for Python stdlib modules
 deprecation==2.1.0 # LEVEL_03 # A library to handle automated deprecations
 dill==0.3.4 # LEVEL_01 # serialize all of python
-dm-tree==0.1.6 # LEVEL_02 # Tree is a library for working with nested data structures
+dm-tree==0.1.7 # LEVEL_01 # Tree is a library for working with nested data structures
 dnspython==2.2.1 # LEVEL_01 # DNS toolkit
 elasticsearch==8.1.2 # LEVEL_03 # Python client for Elasticsearch
 email-validator==1.1.3 # LEVEL_02 # A robust email syntax and deliverability validation library for Python 2.x/3.x
@@ -830,7 +830,7 @@ pyrsistent==0.18.1 # LEVEL_01 # Persistent/Functional/Immutable data structures
 python-slugify==6.1.1 # LEVEL_02 # A Python slugify application that also handles Unicode
 PyWavelets==1.3.0 # LEVEL_02 # PyWavelets, wavelet transform module
 pyzmq==22.3.0 # LEVEL_01 # Python bindings for 0MQ
-qcore==1.7.0 # LEVEL_02 # Quora's core utility library
+qcore==1.8.0 # LEVEL_02 # Quora's core utility library
 regex==2022.3.15 # LEVEL_01 # Alternative regular expression module, to replace re
 retrying==1.3.3 # LEVEL_02 # Retrying
 rsa==4.8 # LEVEL_02 # Pure-Python RSA implementation
@@ -843,7 +843,7 @@ setuptools-git==1.2 # LEVEL_01 # Setuptools revision control system plugin for G
 simpervisor==0.4 # LEVEL_01 # Simple async process supervisor
 sniffio==1.2.0 # LEVEL_01 # Sniff out which async library your code is running under
 sortedcontainers==2.4.0 # LEVEL_01 # Sorted Containers -- Sorted List, Sorted Dict, Sorted Set
-srsly==2.4.2 # LEVEL_02 # Modern high-performance serialization utilities for Python
+srsly==2.4.3 # LEVEL_02 # Modern high-performance serialization utilities for Python
 statsmodels==0.13.2 # LEVEL_04 # Statistical computations and models for Python
 stdlib-list==0.8.0 # LEVEL_01 # A list of Python Standard Libraries (2.6-7, 3.2-9)
 tabulate==0.8.9 # LEVEL_01 # Pretty-print tabular data
@@ -857,7 +857,7 @@ tomlkit==0.10.1 # LEVEL_01 # Style preserving TOML library
 tornado==6.1 # LEVEL_01 # Tornado is a Python web framework and asynchronous networking library, originally developed at FriendFeed
 tqdm==4.64.0 # LEVEL_01 # Fast, Extensible Progress Meter
 traitlets==5.1.1 # LEVEL_01 # Traitlets Python configuration system
-typed-ast==1.5.2 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
+typed-ast==1.5.3 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
 typer==0.4.0 # LEVEL_02 # Typer, build great CLIs. Easy to code. Based on Python type hints
 typing-inspect==0.7.1 # LEVEL_02 # Runtime inspection utilities for typing module
 ua-parser==0.10.0 # LEVEL_01 # Python port of Browserscope's user agent parser
@@ -867,7 +867,7 @@ url-normalize==1.4.3 # LEVEL_02 # URL normalization for Python
 wasabi==0.9.1 # LEVEL_01 # A lightweight console printing and formatting toolkit
 wcwidth==0.2.5 # LEVEL_01 # Measures the displayed width of unicode strings in a terminal
 webencodings==0.5.1 # LEVEL_01 # Character encoding aliases for legacy web content
-websockets==10.2 # LEVEL_01 # An implementation of the WebSocket Protocol (RFC 6455 & 7692)
+websockets==10.3 # LEVEL_01 # An implementation of the WebSocket Protocol (RFC 6455 & 7692)
 websocket-client==1.3.2 # LEVEL_01 # WebSocket client for Python with low level API options
 Werkzeug==2.1.1 # LEVEL_01 # The comprehensive WSGI web application library
 wireless==0.3.3 # LEVEL_01 # A dead simple, cross-platform Python library to connect to wireless networks
@@ -1048,8 +1048,8 @@ axial-positional-embedding==0.2.1 # LEVEL_03 # Axial Positional Embedding
 local-attention==1.4.3 # LEVEL_03 # Local windowed attention, for language modeling
 netCDF4==1.5.8 # LEVEL_03 # Provides an object-oriented python interface to the netCDF version 4 library
 cftime==1.6.0 # LEVEL_02 # Time-handling functionality from netcdf4-python
-omegaconf==2.1.1 # LEVEL_02 # A flexible configuration library
-sentry-sdk==1.5.8 # LEVEL_02 # Python client for Sentry (https://sentry.io)
+omegaconf==2.1.2 # LEVEL_02 # A flexible configuration library
+sentry-sdk==1.5.10 # LEVEL_02 # Python client for Sentry (https://sentry.io)
 yaspin==2.1.0 # LEVEL_02 # Yet Another Terminal Spinner
 configparser==5.2.0 # LEVEL_01 # Updated configparser from Python 3.8 for Python 2.6+
 pathtools==0.1.2 # LEVEL_01 # File system general utilities
