--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -140,25 +140,25 @@ responses==0.18.0 # LEVEL_03 # LOCKED # datasets 2.0.0 requires responses<0.19 #
 # Former LOCKED .. now freed ;-)
 #
 gast==0.5.3 # LEVEL_01 # Python AST that abstracts the underlying Python version
-tokenizers==0.11.6 # LEVEL_01 # Fast and Customizable Tokenizers
+tokenizers==0.12.1 # LEVEL_01 # Fast and Customizable Tokenizers
 absl-py==1.0.0 # LEVEL_02 # Abseil Python Common Libraries, see https://github.com/abseil/abseil-py
 cachetools==5.0.0 # LEVEL_01 # Extensible memoizing collections and decorators
 #
 fastapi==0.75 # LEVEL_04 # FastAPI framework, high performance, easy to learn, fast to code, ready for production
 #
 Deprecated==1.2.13 # LEVEL_02 # Python @deprecated decorator to deprecate old python classes, functions or methods
-typing_extensions==4.1.1 # LEVEL_01 # Backported and Experimental Type Hints for Python 3.6+
+typing_extensions==4.2.0 # LEVEL_01 # Backported and Experimental Type Hints for Python 3.7+
 six==1.16.0 # LEVEL_01 # Python 2 and 3 compatibility utilities
 clang==14.0 # LEVEL_01 # libclang python bindings
 h5py==3.6.0 # LEVEL_02 # Read and write HDF5 files from Python
 wrapt==1.14.0 # LEVEL_01 # Module for decorators, wrappers and monkey patching
-panel==0.12.7 # LEVEL_04 # A high level app and dashboarding solution for Python
+panel==0.13.0 # LEVEL_04 # A high level app and dashboarding solution for Python
 bokeh==2.4.2 # LEVEL_03 # Interactive plots and applications in the browser from Python
 smmap==5.0.0 # LEVEL_01 # A pure Python implementation of a sliding window memory map manager
-pyparsing==3.0.7 # LEVEL_01 # Python parsing module
+pyparsing==3.0.8 # LEVEL_01 # pyparsing module - Classes and methods to define and execute parsing grammars
 #
 black==22.3.0 # LEVEL_02 # The uncompromising code formatter
-pytype==2022.3.29 # LEVEL_04 # ONLY_OSX # Python type inferencer
+pytype==2022.4.15 # LEVEL_04 # ONLY_OSX # Python type inferencer
 
 #
 # Internal .. needed early by this system
@@ -185,7 +185,7 @@ pandas-profiling==3.1.0 # LEVEL_06 # Generate profile report for pandas DataFram
 pandas-datareader==0.10.0 # LEVEL_04 # Data readers extracted from the pandas codebase,should be compatible with recent pandas versions
 geopandas==0.10.2 # LEVEL_04 # ONLY_OSX # Geographic pandas extensions
 pandas==1.4.2 # LEVEL_03 # Powerful data structures for data analysis, time series, and statistics
-pandas-stubs==1.2.0.57 # LEVEL_01 # needed by openai # Type annotations for Pandas
+pandas-stubs==1.2.0.58 # LEVEL_01 # needed by openai # Type annotations for Pandas
 #
 # Excel
 #
