minor cleanup in old requirements8

--- a/requirements_add_resolve.txt
+++ b/requirements_add_resolve.txt
@@ -1,8 +1,8 @@
 Dependencies for Python Engine in Rapidminer:
 #https://docs.rapidminer.com/9.9/deployment/docker-compose/python-engine/index.html
   - fs
-  - libiconv
-  - uwsgi
+  # libiconv
+  # uwsgi
 
 
 #https://docs.perceptilabs.com/perceptilabs/advanced/included-packages#perceptilabs-0.13-and-above
