--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -501,20 +501,24 @@ hsluv==5.0.2 # LEVEL_01 # Human-friendly HSL
 #
 # Google ..
 #
+googleauthentication==0.0.16 # LEVEL_07 # A meta package to be connected to Google services
 google-cloud-bigquery==3.0.1 # LEVEL_06 # Google BigQuery API client library
 google-cloud-bigquery-storage==2.13.1 # LEVEL_05 # BigQuery Storage API API client library
 google-cloud-core==2.3.0 # LEVEL_05 # Google Cloud API client core library
-google-api-python-client==2.45.0 # LEVEL_05 # Google API Client Library for Python
+google-api-python-client==1.7.11 # LEVEL_05 # Google API Client Library for Python
+google-cloud-secret-manager==2.7.2 # LEVEL_05 # Secret Manager API API client library
 google-auth-oauthlib==0.4.6 # LEVEL_04 # LOCKED # tensorboard 2.8.0 depends on google-auth-oauthlib<0.5 and >=0.4.1 # Google Authentication Library
-google-api-core==2.7.2 # LEVEL_04 # Google API client core library
-google-auth-httplib2==0.1.0 # LEVEL_04 # Google Authentication Library: httplib2 transport
+google-api-core==2.3.2 # LEVEL_04 # LOCKED # Google API client core library
+google-auth-httplib2==0.0.3 # LEVEL_04 # LOCKED # Google Authentication Library: httplib2 transport
 googletransx==2.4.2 # LEVEL_03 # Free Google Translate API for Python. Translates totally free of charge
 google-auth==2.6.5 # LEVEL_03 # Google Authentication Library
 googleapis-common-protos==1.56.0 # LEVEL_02 # Common protobufs used in Google APIs
 google-pasta==0.2.0 # LEVEL_02 # pasta is an AST-based Python refactoring library
 google-resumable-media==2.3.2 # LEVEL_02 # Utilities for Google Media Downloads and Resumable Uploads
 google-crc32c==1.3.0 # LEVEL_01 # A python wrapper of the C library 'Google CRC32C'
-uritemplate==4.1.1 # LEVEL_01 # required by google-api-python-client # Implementation of RFC 6570 URI Templates
+#
+grpc-google-iam-v1==0.12.4 # LEVEL_03 # IAM API client library
+uritemplate==3.0.1 # LEVEL_01 # LOCKED # required by google-api-python-client # URI templates
 
 # Azure
 azure-eventhub==5.7.0 # LEVEL_04 # Microsoft Azure Event Hubs Client Library for Python
@@ -1194,12 +1198,18 @@ exceptiongroup==1.0.0rc2 # LEVEL_01 # Backport of PEP 654 (exception groups)
 #
 #
 #
-#fs==2.4.15 # LEVEL_02
+fs==2.4.15 # LEVEL_02 # Python's filesystem abstraction layer
 #
 # plot
 plotnine==0.8.0 # LEVEL_05 # A grammar of graphics for python
+sweetviz==2.1.3 # LEVEL_04 # A pandas-based library to visualize and compare datasets
 descartes==1.1.0 # LEVEL_04 # Use geometric objects as matplotlib paths and patches
 mizani==0.7.4 # LEVEL_04 # Scales for Python
 palettable==3.3.0 # LEVEL_01 # Color palettes for Python
 #
 git-lfs==1.6 # LEVEL_01 # A lightweight Git Large File Storage fetcher
+#
+dacktool==0.0.7 # LEVEL_01 # Some python tools
+dbstream==0.1.13 # LEVEL_06 # A meta package to be connected to several databases
+sshtunnel==0.1.5 # LEVEL_05 # Pure python SSH tunnels
+#
