--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -1217,7 +1217,10 @@ branca==0.5.0 # LEVEL_03 # Generate complex HTML+JS pages with Python
 folium==0.12.1 # LEVEL_04 # Make beautiful maps with Leaflet.js & Python
 #
 #
-# LABELME
+# Labellers ..
+#
+labelImg==1.8.6 # LEVEL_03 # LabelImg is a graphical image annotation tool and label object bounding boxes in images
+#
 labelme==5.0.1 # LEVEL_05 # Image Polygonal Annotation with Python
 imgviz==1.5.0 # LEVEL_04 # Image Visualization Tools
 natsort==8.1.0 # LEVEL_01 # Simple yet flexible natural sorting in Python
