--- a/yml/templates/windows/conda_windows_3.9.yml
+++ b/yml/templates/windows/conda_windows_3.9.yml
@@ -2,13 +2,13 @@ name: py_env_mini
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2022.3.29
-  - certifi=2021.10.8
-  - openssl=1.1.1n
+  - ca-certificates=2022.4.26
+  - certifi=2022.6.15
+  - openssl=1.1.1p
   - pip=21.2.4
   - python=3.9.12
   - setuptools=61.2.0
-  - sqlite=3.38.2
+  - sqlite=3.38.5
   - tzdata=2022a
   - vc=14.2
   - vs2015_runtime=14.27.29016
