--- a/architecture/Windows-x86_64/py_env_nia.yml
+++ b/architecture/Windows-x86_64/py_env_nia.yml
@@ -7,9 +7,7 @@ dependencies:
   - blas=1.0=mkl
   - bzip2=1.0.8=he774522_0
   - ca-certificates=2023.12.12=haa95532_0
-  - certifi=2023.11.17=py311haa95532_0
   - cffi=1.16.0=py311h2bbff1b_0
-  - cryptography=41.0.7=py311h89fc84f_0
   - cuda-cccl=12.3.101=0
   - cuda-cudart=12.1.105=0
   - cuda-cudart-dev=12.1.105=0
@@ -27,7 +25,6 @@ dependencies:
   - freetype=2.12.1=ha860e81_0
   - giflib=5.2.1=h8cc25b3_3
   - intel-openmp=2023.1.0=h59b6b97_46320
-  - jinja2=3.1.2=py311haa95532_0
   - jpeg=9e=h2bbff1b_1
   - lerc=3.0=hd77b12b_0
   - libcublas=12.1.0.26=0
@@ -56,21 +53,14 @@ dependencies:
   - libwebp-base=1.3.2=h2bbff1b_0
   - lz4-c=1.9.4=h2bbff1b_0
   - mkl=2023.1.0=h6b88ed4_46358
-  - mkl-service=2.4.0=py311h2bbff1b_1
-  - mkl_fft=1.3.8=py311h2bbff1b_0
-  - mkl_random=1.2.4=py311h59b6b97_0
   - mpc=1.1.0=h7edee0f_1
   - mpfr=4.0.2=h62dcd97_1
   - mpir=3.0.0=hec2e145_1
   - mpmath=1.3.0=py311haa95532_0
-  - numpy=1.26.2=py311hdab7c0b_0
-  - numpy-base=1.26.2=py311hd01c5d8_0
   - openjpeg=2.4.0=h4fc8c34_0
   - openssl=3.0.12=h2bbff1b_0
   - pycparser=2.21=pyhd3eb1b0_0
-  - pysocks=1.7.1=py311haa95532_0
   - python=3.11.4=he1021f5_0
-  - pytorch=2.1.2=py3.11_cuda12.1_cudnn8_0
   - pytorch-cuda=12.1=hde6ce7c_5
   - pytorch-mutex=1.0=cuda
   - pyyaml=6.0.1=py311h2bbff1b_0
@@ -81,226 +71,201 @@ dependencies:
   - tk=8.6.12=h2bbff1b_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
-  - win_inet_pton=1.1.0=py311haa95532_0
   - xz=5.4.2=h8cc25b3_0
   - yaml=0.2.5=he774522_0
   - zlib=1.2.13=h8cc25b3_0
   - zstd=1.5.5=hd43e919_0
   - pip:
-      - aiobotocore==2.9.0
-      - aiohttp==3.9.1
+      - aiohttp==3.9.3
       - aioitertools==0.11.0
       - aiosignal==1.3.1
-      - albumentations==1.3.1
+      - albumentations==1.4.0
       - altair==5.2.0
-      - anyio==4.2.0
+      - anyio==4.3.0
       - arena-api==2.3.3
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
-      - arrow==1.3.0
       - asttokens==2.4.1
-      - astunparse==1.6.3
       - async-lru==2.0.4
-      - async-timeout==4.0.3
-      - attrs==23.1.0
+      - attrs==23.2.0
       - babel==2.14.0
-      - backcall==0.2.0
-      - beautifulsoup4==4.12.2
+      - beautifulsoup4==4.12.3
       - bleach==6.1.0
       - blinker==1.7.0
-      - boto==2.49.0
-      - botocore==1.33.13
+      - botocore==1.34.49
       - braincube-connector==2.6.0
-      - brotli==1.1.0
       - cachetools==5.3.2
+      - certifi==2024.2.2
       - charset-normalizer==3.3.2
       - click==8.1.7
+      - clr-loader==0.2.6
       - colorama==0.4.6
-      - comm==0.2.0
-      - compress-pickle==2.1.0
+      - comm==0.2.1
       - contourpy==1.2.0
-      - customtkinter==5.2.1
       - cycler==0.12.1
-      - darkdetect==0.8.0
-      - debugpy==1.8.0
+      - debugpy==1.8.1
       - decorator==5.1.1
       - defusedxml==0.7.1
-      - dm-tree==0.1.8
-      - docopt==0.6.2
-      - exceptiongroup==1.2.0
+      - deprecation==2.1.0
       - executing==2.0.1
-      - fastjsonschema==2.19.0
-      - flake8==6.1.0
-      - flask==3.0.0
-      - fonttools==4.47.0
-      - fpdf2==2.7.7
-      - fqdn==1.5.1
+      - fastjsonschema==2.19.1
+      - flake8==7.0.0
+      - fonttools==4.49.0
+      - fpdf2==2.7.8
       - frozenlist==1.4.1
-      - fsspec==2023.12.2
+      - fsspec==2024.2.0
       - gitdb==4.0.11
-      - gitpython==3.1.40
-      - gmpy2==2.1.5
-      - google-api-core==2.15.0
-      - google-auth==2.25.2
+      - gitpython==3.1.42
+      - google-api-core==2.17.1
+      - google-auth==2.28.1
       - google-auth-oauthlib==1.2.0
-      - google-cloud-aiplatform==1.38.1
-      - google-cloud-bigquery==3.14.1
+      - google-cloud-aiplatform==1.42.1
+      - google-cloud-bigquery==3.17.2
       - google-cloud-core==2.4.1
-      - google-cloud-resource-manager==1.11.0
+      - google-cloud-resource-manager==1.12.2
       - google-cloud-storage==2.14.0
       - google-crc32c==1.5.0
-      - google-pasta==0.2.0
       - google-resumable-media==2.7.0
       - googleapis-common-protos==1.62.0
       - grpc-google-iam-v1==0.13.0
-      - grpcio==1.60.0
-      - grpcio-status==1.60.0
+      - grpcio==1.62.0
+      - h11==0.14.0
       - h5py==3.10.0
+      - httpcore==1.0.4
+      - httpx==0.27.0
       - idna==3.6
-      - imageio==2.33.1
-      - importlib-metadata==6.11.0
+      - imageio==2.34.0
+      - importlib-metadata==7.0.1
       - iniconfig==2.0.0
-      - ipykernel==6.27.1
-      - ipython==8.19.0
-      - isoduration==20.11.0
+      - ipykernel==6.29.2
+      - ipython==8.22.1
       - itsdangerous==2.1.2
       - jedi==0.19.1
+      - jinja2==3.1.3
       - jmespath==1.0.1
       - joblib==1.3.2
-      - json-numpy==1.0.1
-      - json-tricks==3.17.3
-      - json5==0.9.14
-      - jsonpointer==2.4
-      - jsonschema==4.20.0
-      - jsonschema-specifications==2023.11.2
+      - json-numpy==2.0.0
+      - json5==0.9.17
+      - jsonschema==4.21.1
+      - jsonschema-specifications==2023.12.1
       - jupyter-client==8.6.0
-      - jupyter-core==5.5.1
+      - jupyter-core==5.7.1
       - jupyter-events==0.9.0
-      - jupyter-lsp==2.2.1
-      - jupyter-server==2.12.1
-      - jupyter-server-terminals==0.5.0
-      - jupyterlab==4.0.9
+      - jupyter-lsp==2.2.2
+      - jupyter-server==2.12.5
+      - jupyter-server-terminals==0.5.2
+      - jupyterlab==4.1.2
       - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.25.2
+      - jupyterlab-server==2.25.3
       - kiwisolver==1.4.5
       - lazy-loader==0.3
-      - markdown==3.5.1
+      - markdown==3.5.2
       - markdown-it-py==3.0.0
-      - markupsafe==2.1.3
-      - matplotlib==3.8.2
+      - markupsafe==2.1.5
+      - matplotlib==3.8.3
       - matplotlib-inline==0.1.6
       - mccabe==0.7.0
       - mdurl==0.1.2
       - mistune==3.0.2
-      - ml-dtypes==0.3.1
-      - multidict==6.0.4
+      - multidict==6.0.5
       - nbclient==0.9.0
-      - nbconvert==7.13.1
+      - nbconvert==7.16.1
       - nbformat==5.9.2
-      - nest-asyncio==1.5.8
+      - nest-asyncio==1.6.0
       - networkx==3.2.1
-      - notebook-shim==0.2.3
+      - notebook-shim==0.2.4
+      - numpy==1.26.4
       - oauthlib==3.2.2
-      - opencv-contrib-python==4.8.1.78
-      - opencv-python==4.8.1.78
-      - opencv-python-headless==4.8.1.78
-      - overrides==7.4.0
+      - opencv-contrib-python==4.9.0.80
+      - opencv-python==4.9.0.80
+      - opencv-python-headless==4.9.0.80
+      - overrides==7.7.0
       - packaging==23.2
-      - pandas==2.1.4
-      - pandocfilters==1.5.0
+      - pandas==2.2.1
+      - pandocfilters==1.5.1
       - parso==0.8.3
       - persist-queue==0.8.1
-      - pickleshare==0.7.5
-      - pillow==10.1.0
-      - pip==23.3.2
-      - pipreqs==0.4.13
-      - platformdirs==4.1.0
-      - pluggy==1.3.0
-      - prometheus-client==0.19.0
+      - pillow==10.2.0
+      - pip==24.0
+      - platformdirs==4.2.0
+      - pluggy==1.4.0
+      - prometheus-client==0.20.0
       - prompt-toolkit==3.0.43
       - proto-plus==1.23.0
-      - protobuf==4.25.1
-      - psutil==5.9.7
+      - protobuf==4.25.3
+      - psutil==5.9.8
       - pure-eval==0.2.2
-      - pyarrow==14.0.2
+      - pyarrow==15.0.0
       - pyasn1==0.5.1
       - pyasn1-modules==0.3.0
-      - pycairo==1.25.1
       - pycodestyle==2.11.1
       - pydeck==0.8.0
-      - pyflakes==3.1.0
+      - pyflakes==3.2.0
       - pygments==2.17.2
-      - pympler==1.0.1
-      - pyopenssl==23.3.0
       - pyparsing==3.1.1
       - pypng==0.20220715.0
-      - pyrsistent==0.20.0
-      - pytest==7.4.3
+      - pytest==8.0.2
       - python-dateutil==2.8.2
       - python-json-logger==2.0.7
-      - pytz==2023.3
-      - pytz-deprecation-shim==0.1.0.post0
-      - pywavelets==1.5.0
+      - pythonnet==3.0.3
+      - pytz==2024.1
       - pywin32==306
       - pywinpty==2.0.12
       - pyzbar==0.1.9
       - pyzmq==25.1.2
       - qrcode==7.4.2
       - qudida==0.0.4
-      - referencing==0.32.0
+      - referencing==0.33.0
       - requests-oauthlib==1.3.1
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
       - rich==13.7.0
-      - rpds-py==0.15.2
+      - rpds-py==0.18.0
       - rsa==4.9
-      - s3fs==2023.12.2
+      - ruff==0.2.2
       - scikit-image==0.22.0
-      - scikit-learn==1.3.2
-      - scipy==1.11.4
+      - scikit-learn==1.4.0
+      - scipy==1.12.0
+      - segment-anything==1.0
       - send2trash==1.8.2
-      - setuptools==69.0.3
-      - shapely==2.0.2
-      - shiboken6==6.6.1
+      - setuptools==69.1.1
+      - shapely==2.0.3
       - six==1.16.0
       - smmap==5.0.1
       - sniffio==1.3.0
       - soupsieve==2.5
       - stack-data==0.6.3
-      - streamlit==1.29.0
+      - streamlit==1.31.1
       - tenacity==8.2.3
-      - tensorboard-data-server==0.7.2
-      - tensorflow-estimator==2.15.0
-      - termcolor==2.4.0
       - terminado==0.18.0
-      - threadpoolctl==3.2.0
-      - tifffile==2023.12.9
+      - threadpoolctl==3.3.0
+      - tifffile==2024.2.12
       - tinycss2==1.2.1
+      - toga-core==0.4.2
+      - toga-winforms==0.4.2
       - toml==0.10.2
-      - tomli==2.0.1
-      - toolz==0.12.0
-      - torch==2.1.2
-      - torchaudio==2.1.2
-      - torchvision==0.16.2
+      - toolz==0.12.1
+      - torch==2.2.1+cu121
+      - torchaudio==2.2.1+cu121
+      - torchvision==0.17.1+cu121
       - tornado==6.4
-      - traitlets==5.14.0
-      - types-python-dateutil==2.8.19.14
+      - traitlets==5.14.1
+      - travertino==0.3.0
+      - types-python-dateutil==2.8.19.20240106
       - typing-extensions==4.9.0
-      - tzdata==2023.3
+      - tzdata==2024.1
       - tzlocal==5.2
-      - uri-template==1.3.0
       - urllib3==2.0.7
       - validators==0.22.0
-      - watchdog==3.0.0
-      - wcwidth==0.2.12
-      - webcolors==1.13
+      - watchdog==4.0.0
+      - wcwidth==0.2.13
       - webencodings==0.5.1
       - websocket-client==1.7.0
       - werkzeug==3.0.1
       - wheel==0.42.0
       - wrapt==1.16.0
-      - xlsxwriter==3.1.9
-      - yarg==0.1.9
+      - xlsxwriter==3.2.0
       - yarl==1.9.4
+      - yoctopuce==2.0.59414
       - zipp==3.17.0
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_nia
