--- a/architecture/Windows-x86_64/py_env_nia.yml
+++ b/architecture/Windows-x86_64/py_env_nia.yml
@@ -110,6 +110,7 @@ dependencies:
       - executing==2.0.1
       - fastjsonschema==2.19.1
       - flake8==7.0.0
+      - flask==3.0.2
       - fonttools==4.49.0
       - fpdf2==2.7.8
       - frozenlist==1.4.1
