--- a/architecture/Windows-x86_64/py_env_nia.yml
+++ b/architecture/Windows-x86_64/py_env_nia.yml
@@ -81,6 +81,7 @@ dependencies:
       - aiosignal==1.3.1
       - albumentations==1.4.0
       - altair==5.2.0
+      - annotated-types==0.6.0
       - anyio==4.3.0
       - arena-api==2.3.3
       - argon2-cffi==23.1.0
@@ -94,7 +95,7 @@ dependencies:
       - blinker==1.7.0
       - botocore==1.34.49
       - braincube-connector==2.6.0
-      - cachetools==5.3.2
+      - cachetools==5.3.3
       - certifi==2024.2.2
       - charset-normalizer==3.3.2
       - click==8.1.7
@@ -103,18 +104,26 @@ dependencies:
       - comm==0.2.1
       - contourpy==1.2.0
       - cycler==0.12.1
+      - dataclasses-json==0.6.4
       - debugpy==1.8.1
       - decorator==5.1.1
       - defusedxml==0.7.1
+      - deprecated==1.2.14
       - deprecation==2.1.0
+      - dirtyjson==1.0.8
+      - distro==1.9.0
+      - dnspython==2.6.1
+      - docstring-parser==0.16
+      - email-validator==2.1.1
+      - exceptiongroup==1.2.1
       - executing==2.0.1
       - fastjsonschema==2.19.1
       - flake8==7.0.0
       - flask==3.0.2
-      - fonttools==4.49.0
+      - fonttools==4.50.0
       - fpdf2==2.7.8
       - frozenlist==1.4.1
-      - fsspec==2024.2.0
+      - fsspec==2024.3.1
       - gitdb==4.0.11
       - gitpython==3.1.42
       - google-api-core==2.17.1
@@ -123,13 +132,17 @@ dependencies:
       - google-cloud-aiplatform==1.42.1
       - google-cloud-bigquery==3.17.2
       - google-cloud-core==2.4.1
+      - google-cloud-pipeline-components==2.11.0
       - google-cloud-resource-manager==1.12.2
       - google-cloud-storage==2.14.0
+      - google-cloud-vision==3.7.1
       - google-crc32c==1.5.0
       - google-resumable-media==2.7.0
       - googleapis-common-protos==1.62.0
+      - greenlet==3.0.3
       - grpc-google-iam-v1==0.13.0
-      - grpcio==1.62.0
+      - grpcio==1.62.1
+      - grpcio-status==1.62.0
       - h11==0.14.0
       - h5py==3.10.0
       - httpcore==1.0.4
@@ -158,25 +171,49 @@ dependencies:
       - jupyterlab==4.1.2
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.25.3
+      - kfp==2.7.0
+      - kfp-pipeline-spec==0.3.0
+      - kfp-server-api==2.0.5
       - kiwisolver==1.4.5
+      - kubernetes==26.1.0
       - lazy-loader==0.3
+      - llama-index==0.10.30
+      - llama-index-agent-openai==0.2.3
+      - llama-index-cli==0.1.12
+      - llama-index-core==0.10.30
+      - llama-index-embeddings-openai==0.1.8
+      - llama-index-indices-managed-llama-cloud==0.1.5
+      - llama-index-legacy==0.9.48
+      - llama-index-llms-openai==0.1.16
+      - llama-index-multi-modal-llms-openai==0.1.5
+      - llama-index-program-openai==0.1.5
+      - llama-index-question-gen-openai==0.1.3
+      - llama-index-readers-file==0.1.19
+      - llama-index-readers-llama-parse==0.1.4
+      - llama-parse==0.4.1
+      - llamaindex-py-client==0.1.18
       - markdown==3.5.2
       - markdown-it-py==3.0.0
       - markupsafe==2.1.5
+      - marshmallow==3.21.1
       - matplotlib==3.8.3
       - matplotlib-inline==0.1.6
       - mccabe==0.7.0
       - mdurl==0.1.2
       - mistune==3.0.2
       - multidict==6.0.5
+      - mypy-extensions==1.0.0
       - nbclient==0.9.0
       - nbconvert==7.16.1
       - nbformat==5.9.2
       - nest-asyncio==1.6.0
       - networkx==3.2.1
+      - nltk==3.8.1
       - notebook-shim==0.2.4
       - numpy==1.26.4
       - oauthlib==3.2.2
+      - ollama==0.1.8
+      - openai==1.23.2
       - opencv-contrib-python==4.9.0.80
       - opencv-python==4.9.0.80
       - opencv-python-headless==4.9.0.80
@@ -200,10 +237,13 @@ dependencies:
       - pyasn1==0.5.1
       - pyasn1-modules==0.3.0
       - pycodestyle==2.11.1
+      - pydantic==2.7.0
+      - pydantic-core==2.18.1
       - pydeck==0.8.0
       - pyflakes==3.2.0
       - pygments==2.17.2
       - pyparsing==3.1.1
+      - pypdf==4.2.0
       - pypng==0.20220715.0
       - pytest==8.0.2
       - python-dateutil==2.8.2
@@ -217,7 +257,9 @@ dependencies:
       - qrcode==7.4.2
       - qudida==0.0.4
       - referencing==0.33.0
+      - regex==2024.4.16
       - requests-oauthlib==1.3.1
+      - requests-toolbelt==0.10.1
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
       - rich==13.7.0
@@ -233,30 +275,36 @@ dependencies:
       - shapely==2.0.3
       - six==1.16.0
       - smmap==5.0.1
+      - snakeviz==2.2.0
       - sniffio==1.3.0
       - soupsieve==2.5
+      - sqlalchemy==2.0.29
       - stack-data==0.6.3
       - streamlit==1.31.1
+      - striprtf==0.0.26
+      - tabulate==0.9.0
       - tenacity==8.2.3
       - terminado==0.18.0
       - threadpoolctl==3.3.0
       - tifffile==2024.2.12
+      - tiktoken==0.6.0
       - tinycss2==1.2.1
       - toga-core==0.4.2
-      - toga-winforms==0.4.2
       - toml==0.10.2
       - toolz==0.12.1
       - torch==2.2.1+cu121
       - torchaudio==2.2.1+cu121
       - torchvision==0.17.1+cu121
       - tornado==6.4
+      - tqdm==4.66.2
       - traitlets==5.14.1
       - travertino==0.3.0
       - types-python-dateutil==2.8.19.20240106
       - typing-extensions==4.9.0
+      - typing-inspect==0.9.0
       - tzdata==2024.1
       - tzlocal==5.2
-      - urllib3==2.0.7
+      - urllib3==1.26.18
       - validators==0.22.0
       - watchdog==4.0.0
       - wcwidth==0.2.13
@@ -267,6 +315,6 @@ dependencies:
       - wrapt==1.16.0
       - xlsxwriter==3.2.0
       - yarl==1.9.4
-      - yoctopuce==2.0.59414
+      - yoctopuce==2.0.60394
       - zipp==3.17.0
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_nia
