--- a/architecture/Windows-x86_64/py_env_nia.yml
+++ b/architecture/Windows-x86_64/py_env_nia.yml
@@ -160,6 +160,8 @@ dependencies:
       - joblib==1.3.2
       - json-numpy==2.0.0
       - json5==0.9.17
+      - jsonpatch==1.33
+      - jsonpointer==2.4
       - jsonschema==4.21.1
       - jsonschema-specifications==2023.12.1
       - jupyter-client==8.6.0
@@ -176,6 +178,9 @@ dependencies:
       - kfp-server-api==2.0.5
       - kiwisolver==1.4.5
       - kubernetes==26.1.0
+      - langchain-community==0.0.34
+      - langchain-core==0.1.45
+      - langsmith==0.1.49
       - lazy-loader==0.3
       - llama-index==0.10.30
       - llama-index-agent-openai==0.2.3
@@ -184,6 +189,7 @@ dependencies:
       - llama-index-embeddings-openai==0.1.8
       - llama-index-indices-managed-llama-cloud==0.1.5
       - llama-index-legacy==0.9.48
+      - llama-index-llms-ollama==0.1.2
       - llama-index-llms-openai==0.1.16
       - llama-index-multi-modal-llms-openai==0.1.5
       - llama-index-program-openai==0.1.5
@@ -217,6 +223,7 @@ dependencies:
       - opencv-contrib-python==4.9.0.80
       - opencv-python==4.9.0.80
       - opencv-python-headless==4.9.0.80
+      - orjson==3.10.1
       - overrides==7.7.0
       - packaging==23.2
       - pandas==2.2.1
