--- a/architecture/Windows-x86_64/py_env_nia_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_nia_conda_env_export.yml
@@ -76,6 +76,7 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_0
   - zstd=1.5.5=hd43e919_0
   - pip:
+      - aiofiles==23.2.1
       - aiohttp==3.9.3
       - aioitertools==0.11.0
       - aiosignal==1.3.1
@@ -91,6 +92,7 @@ dependencies:
       - attrs==23.2.0
       - babel==2.14.0
       - beautifulsoup4==4.12.3
+      - bidict==0.23.1
       - bleach==6.1.0
       - blinker==1.7.0
       - botocore==1.34.49
@@ -114,9 +116,11 @@ dependencies:
       - distro==1.9.0
       - dnspython==2.6.1
       - docstring-parser==0.16
+      - docutils==0.19
       - email-validator==2.1.1
       - exceptiongroup==1.2.1
       - executing==2.0.1
+      - fastapi==0.109.2
       - fastjsonschema==2.19.1
       - flake8==7.0.0
       - flask==3.0.2
@@ -146,8 +150,10 @@ dependencies:
       - h11==0.14.0
       - h5py==3.10.0
       - httpcore==1.0.4
+      - httptools==0.6.1
       - httpx==0.27.0
       - idna==3.6
+      - ifaddr==0.2.0
       - imageio==2.34.0
       - importlib-metadata==7.0.1
       - iniconfig==2.0.0
@@ -200,6 +206,7 @@ dependencies:
       - llamaindex-py-client==0.1.18
       - markdown==3.5.2
       - markdown-it-py==3.0.0
+      - markdown2==2.4.13
       - markupsafe==2.1.5
       - marshmallow==3.21.1
       - matplotlib==3.8.3
@@ -214,6 +221,7 @@ dependencies:
       - nbformat==5.9.2
       - nest-asyncio==1.6.0
       - networkx==3.2.1
+      - nicegui==1.4.23
       - nltk==3.8.1
       - notebook-shim==0.2.4
       - numpy==1.26.4
@@ -238,6 +246,7 @@ dependencies:
       - prompt-toolkit==3.0.43
       - proto-plus==1.23.0
       - protobuf==4.25.3
+      - pscript==0.7.7
       - psutil==5.9.8
       - pure-eval==0.2.2
       - pyarrow==15.0.0
@@ -254,7 +263,11 @@ dependencies:
       - pypng==0.20220715.0
       - pytest==8.0.2
       - python-dateutil==2.8.2
+      - python-dotenv==1.0.1
+      - python-engineio==4.9.0
       - python-json-logger==2.0.7
+      - python-multipart==0.0.9
+      - python-socketio==5.11.2
       - pythonnet==3.0.3
       - pytz==2024.1
       - pywin32==306
@@ -280,6 +293,7 @@ dependencies:
       - send2trash==1.8.2
       - setuptools==69.1.1
       - shapely==2.0.3
+      - simple-websocket==1.0.0
       - six==1.16.0
       - smmap==5.0.1
       - snakeviz==2.2.0
@@ -287,6 +301,7 @@ dependencies:
       - soupsieve==2.5
       - sqlalchemy==2.0.29
       - stack-data==0.6.3
+      - starlette==0.36.3
       - streamlit==1.31.1
       - striprtf==0.0.26
       - tabulate==0.9.0
@@ -312,14 +327,19 @@ dependencies:
       - tzdata==2024.1
       - tzlocal==5.2
       - urllib3==1.26.18
+      - uvicorn==0.29.0
       - validators==0.22.0
+      - vbuild==0.8.2
       - watchdog==4.0.0
+      - watchfiles==0.21.0
       - wcwidth==0.2.13
       - webencodings==0.5.1
       - websocket-client==1.7.0
+      - websockets==12.0
       - werkzeug==3.0.1
       - wheel==0.42.0
       - wrapt==1.16.0
+      - wsproto==1.2.0
       - xlsxwriter==3.2.0
       - yarl==1.9.4
       - yoctopuce==2.0.60394
