--- a/architecture/Windows-x86_64/py_env_nia_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_nia_conda_env_export.yml
@@ -184,8 +184,11 @@ dependencies:
       - kfp-server-api==2.0.5
       - kiwisolver==1.4.5
       - kubernetes==26.1.0
+      - langchain==0.1.16
       - langchain-community==0.0.34
       - langchain-core==0.1.45
+      - langchain-openai==0.1.3
+      - langchain-text-splitters==0.0.1
       - langsmith==0.1.49
       - lazy-loader==0.3
       - llama-index==0.10.30
@@ -278,6 +281,7 @@ dependencies:
       - qudida==0.0.4
       - referencing==0.33.0
       - regex==2024.4.16
+      - replicate==0.25.2
       - requests-oauthlib==1.3.1
       - requests-toolbelt==0.10.1
       - rfc3339-validator==0.1.4
