updated py_env_202309 on Windows - added wandb

--- a/architecture/Windows-x86_64/py_env_nia_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_nia_conda_env_export.yml
@@ -84,6 +84,7 @@ dependencies:
       - altair==5.2.0
       - annotated-types==0.6.0
       - anyio==4.3.0
+      - appdirs==1.4.4
       - arena-api==2.3.3
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
@@ -115,6 +116,7 @@ dependencies:
       - dirtyjson==1.0.8
       - distro==1.9.0
       - dnspython==2.6.1
+      - docker-pycreds==0.4.0
       - docstring-parser==0.16
       - docutils==0.19
       - email-validator==2.1.1
@@ -295,6 +297,8 @@ dependencies:
       - scipy==1.12.0
       - segment-anything==1.0
       - send2trash==1.8.2
+      - sentry-sdk==2.0.1
+      - setproctitle==1.3.3
       - setuptools==69.1.1
       - shapely==2.0.3
       - simple-websocket==1.0.0
@@ -334,6 +338,7 @@ dependencies:
       - uvicorn==0.29.0
       - validators==0.22.0
       - vbuild==0.8.2
+      - wandb==0.16.6
       - watchdog==4.0.0
       - watchfiles==0.21.0
       - wcwidth==0.2.13
