--- a/architecture/Windows-x86_64/py_env_nia_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_nia_conda_env_export.yml
@@ -5,8 +5,8 @@ channels:
   - defaults
 dependencies:
   - blas=1.0=mkl
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.12.12=haa95532_0
+  - bzip2=1.0.8=h2bbff1b_6
+  - ca-certificates=2024.3.11=haa95532_0
   - cffi=1.16.0=py311h2bbff1b_0
   - cuda-cccl=12.3.101=0
   - cuda-cudart=12.1.105=0
@@ -58,7 +58,7 @@ dependencies:
   - mpir=3.0.0=hec2e145_1
   - mpmath=1.3.0=py311haa95532_0
   - openjpeg=2.4.0=h4fc8c34_0
-  - openssl=3.0.12=h2bbff1b_0
+  - openssl=3.0.13=h2bbff1b_1
   - pycparser=2.21=pyhd3eb1b0_0
   - python=3.11.4=he1021f5_0
   - pytorch-cuda=12.1=hde6ce7c_5
@@ -114,6 +114,7 @@ dependencies:
       - deprecated==1.2.14
       - deprecation==2.1.0
       - dirtyjson==1.0.8
+      - diskcache==5.6.3
       - distro==1.9.0
       - dnspython==2.6.1
       - docker-pycreds==0.4.0
@@ -154,6 +155,7 @@ dependencies:
       - httpcore==1.0.4
       - httptools==0.6.1
       - httpx==0.27.0
+      - huggingface-hub==0.23.0
       - idna==3.6
       - ifaddr==0.2.0
       - imageio==2.34.0
@@ -193,6 +195,7 @@ dependencies:
       - langchain-text-splitters==0.0.1
       - langsmith==0.1.49
       - lazy-loader==0.3
+      - llama-cpp-python==0.2.69
       - llama-index==0.10.30
       - llama-index-agent-openai==0.2.3
       - llama-index-cli==0.1.12
