--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -6,9 +6,7 @@ dependencies:
   - ca-certificates=2024.3.11=haa95532_0
   - libffi=3.4.4=hd77b12b_1
   - openssl=3.0.13=h2bbff1b_1
-  - pip=23.3.1=py311haa95532_0
   - python=3.11.9=he1021f5_0
-  - setuptools=68.2.2=py311haa95532_0
   - sqlite=3.45.3=h2bbff1b_0
   - tk=8.6.14=h0416ee5_0
   - tzdata=2024a=h04d1e81_0
@@ -28,6 +26,8 @@ dependencies:
       - networkx==3.3
       - numpy==1.26.4
       - pillow==10.3.0
+      - pip==24.0
+      - setuptools==69.5.1
       - sympy==1.12
       - tbb==2021.12.0
       - torch==2.3.0+cu121
